Added exclude tables option and some output.